Fixed overflow bug in responsive (animation)

--- a/src/scss/components/components.cards.scss
+++ b/src/scss/components/components.cards.scss
@@ -11,7 +11,7 @@
   }
 
   li {
-   list-style: circle;
+   list-style-type: disc;
    margin-left: 30px;
   }
 
